Use --pasv for the uscan download
--pasv is required if you have any firewall blocking the back-connection
from the FTP site, and should be harmless otherwise.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@862 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -145,7 +145,8 @@ debian/libcuda1-ia32.symbols: debian/libcuda1.symbols
 get-orig-source:
 	rm -rf get-orig-source || true
 	mkdir get-orig-source
-	uscan --no-symlink --download-current-version --destdir get-orig-source
+	uscan --no-symlink --download-current-version --pasv \
+	    --destdir get-orig-source
 	@set -e -x ; \
 		cd get-orig-source ; \
 		newversion=$$(ls *-x86-*.run | sed -e 's/.*-\([0-9.]*\)-.*/\1/') ; \
