get-orig-source improvements
Name the directory ending in .orig, which is the convention whenever
the upstream tarball is generated by the Debian maintainers (as opposed
to upstream), per devref.

Create the new *.orig.tar.gz file in the current directory, not the
parent directory, per Policy.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@863 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -148,11 +148,12 @@ get-orig-source:
 	uscan --no-symlink --download-current-version --pasv \
 	    --destdir get-orig-source
 	@set -e -x ; \
-		cd get-orig-source ; \
-		newversion=$$(ls *-x86-*.run | sed -e 's/.*-\([0-9.]*\)-.*/\1/') ; \
-		mkdir nvidia-graphics-drivers-$$newversion ; \
-		mv *.run nvidia-graphics-drivers-$$newversion/ ; \
-		chmod 0755 nvidia-graphics-drivers-$$newversion/* ; \
-		tar cfvz ../../nvidia-graphics-drivers_$$newversion.orig.tar.gz --owner=root --group=src nvidia-graphics-drivers-$$newversion
-	rm -rf get-orig-source || true
-
+	    cd get-orig-source ; \
+	    newversion=$$(ls *-x86-*.run | sed -e 's/.*-\([0-9.]*\)-.*/\1/') ; \
+	    mkdir nvidia-graphics-drivers-$${newversion}.orig ; \
+	    mv *.run nvidia-graphics-drivers-$${newversion}.orig/ ; \
+	    chmod 0755 nvidia-graphics-drivers-$${newversion}.orig/* ; \
+	    tar cfvz ../nvidia-graphics-drivers_$$newversion.orig.tar.gz \
+		--owner=root --group=src \
+		nvidia-graphics-drivers-$${newversion}.orig
+	rm -rf get-orig-source
