--- a/debian/module/debian/control.template.in
+++ b/debian/module/debian/control.template.in
@@ -3,14 +3,15 @@ Section: non-free/kernel
 Priority: optional
 Maintainer: Debian NVIDIA Maintainers <pkg-nvidia-devel@lists.alioth.debian.org>
 Uploaders: Russ Allbery <rra@debian.org>
-Build-Depends: debhelper (>= 7.2.3~), quilt (>= 0.46-7~), module-assistant
+Build-Depends: debhelper (>= 7.2.3~), quilt (>= 0.46-7~)
 Standards-Version: 3.8.4
 Homepage: http://www.nvidia.com/
 
 Package: nvidia-kernel-#KVERS#
 Architecture: i386 amd64
 Provides: nvidia-kernel-#VERSION#
-Depends: nvidia-kernel-common, linux-image-#KVERS#
+Depends: nvidia-kernel-common
+Recommends: linux-image-#KVERS#
 Description: NVIDIA binary kernel module for Linux #KVERS#
  This package provides the non-free NVIDIA binary kernel module built for
  the Debian Linux kernel package.  This kernel module is required by the
