--- a/debian/control
+++ b/debian/control
@@ -7,9 +7,9 @@ Uploaders:
  Russ Allbery <rra@debian.org>,
 Vcs-Svn: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-nvidia/packages/nvidia-graphics-drivers
-Build-Depends: debhelper (>= 7.2.3~), libxext6, bzip2, dkms (>= 2.1.1.1),
- libc6-dev-i386 [amd64], lib32gcc1 [amd64], lib32z1 [amd64],
- ia32-libs (>= 20090804) [amd64]
+Build-Depends: debhelper (>= 7.2.3~), bzip2, dkms (>= 2.1.1.1), libxext6,
+ quilt, ia32-libs (>= 20090804) [amd64], lib32gcc1 [amd64], lib32z1 [amd64],
+ libc6-dev-i386 [amd64]
 Standards-Version: 3.8.4
 Homepage: http://www.nvidia.com
 
