Clean up some Lintian warnings for nvidia-kernel-dkms
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@875 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -105,7 +105,8 @@ override_dh_auto_install:
 	mv $(module_source) debian/nvidia-kernel-dkms/usr/src/nvidia-$(version)
 	cd debian/nvidia-kernel-dkms/usr/src/nvidia-$(version) \
 	    && QUILT_PATCHES=debian/patches quilt --quiltrc /dev/null push -a \
-	    && rm -rf .pc debian
+	    && rm -rf .pc debian \
+	    && chmod a+x conftest.sh
 	dh_dkms -V $(version)
 	rmdir debian/nvidia-kernel-source/usr/src/modules
 
