Some formatting cleanup from Andreas Beckmann
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@878 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -93,6 +93,7 @@ override_dh_auto_install:
 	# Fix permissions.
 	chmod -R a-sx,u=rwX,go=rX debian/nvidia-kernel-source/usr/src
 	chmod a+x $(module_source)/debian/rules
+	chmod a+x $(module_source)/conftest.sh
 
 	# Build the tarball.
 	tar cfj debian/nvidia-kernel-source/usr/src/nvidia-kernel.tar.bz2 \
@@ -105,8 +106,7 @@ override_dh_auto_install:
 	mv $(module_source) debian/nvidia-kernel-dkms/usr/src/nvidia-$(version)
 	cd debian/nvidia-kernel-dkms/usr/src/nvidia-$(version) \
 	    && QUILT_PATCHES=debian/patches quilt --quiltrc /dev/null push -a \
-	    && rm -rf .pc debian \
-	    && chmod a+x conftest.sh
+	    && rm -rf .pc debian
 	dh_dkms -V $(version)
 	rmdir debian/nvidia-kernel-source/usr/src/modules
 
