Additional cleanup of the DKMS changes
[ Andreas Beckmann ]
- n-k-dkms should Depends: n-k-common, shouldn't it?
- n-k-dkms should Conflicts: n-k-legacy-ABCxx-dkms - these packages are
  coming soon (hopefully) and only one n-k*-dkms can provide nvidia.ko
  at a time, otherwise we get conflicts
- use a few more variables and less hardcoded paths when building the
  kernel source tarballs
* nvidia-kernel-source.README.Debian: mention dkms and m-a before
  everything else, drop some very outdated information


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@882 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -82,9 +82,13 @@ Description: NVIDIA binary Xorg driver development files
 Package: nvidia-kernel-dkms
 Section: non-free/kernel
 Architecture: i386 amd64
-Depends: ${misc:Depends}, dkms
+Depends: ${misc:Depends}, dkms, nvidia-kernel-common
 Recommends: nvidia-glx (>= ${nvidia:Version})
 Provides: nvidia-kernel-${nvidia:Version}
+Conflicts:
+ nvidia-kernel-legacy-71xx-dkms,
+ nvidia-kernel-legacy-96xx-dkms,
+ nvidia-kernel-legacy-173xx-dkms,
 Description: NVIDIA binary kernel module DKMS source
  This package builds the NVIDIA Xorg binary kernel module needed by
  nvidia-glx, using DKMS.  The kernel module will be built for your running
