--- a/debian/rules
+++ b/debian/rules
@@ -25,6 +25,8 @@ AUTOKEEP	 = debian/copyright
 AUTOCLEAN	 = $(filter-out $(AUTOKEEP),$(AUTOGEN))
 
 module_source	 = debian/nvidia-kernel-source/usr/src/modules/nvidia-kernel
+module_tbz	 = $(subst /modules/,/,$(module_source)).tar.bz2
+dkms_source	 = debian/nvidia-kernel-dkms/usr/src/nvidia-$(version)
 
 .PHONY: autogen configure
 autogen: $(AUTOGEN)
@@ -43,17 +45,13 @@ unpack-stamp: ${filename_x86} ${filename_x86_64}
 	touch $@
 
 
-# build kernel module source tarball
-module-source-stamp: configure
-	dh_testdir
-
 .PHONY: binary binary-arch binary-indep build clean install
 binary binary-arch binary-indep build clean install:
 	dh $@
 
 override_dh_auto_clean:
 	rm -f NVIDIA-Linux NVIDIA-Linux-i386 NVIDIA-Linux-amd64
-	rm -fr $(dirname_x86) $(dirname_x86_64) nvidia-kernel.tar.bz2
+	rm -fr $(dirname_x86) $(dirname_x86_64)
 	rm -fr debian/temp
 
 override_dh_clean:
@@ -62,13 +60,12 @@ override_dh_clean:
 	$(MAKE) -f debian/rules $(AUTOKEEP)
 
 override_dh_auto_configure: configure
-override_dh_auto_build: module-source-stamp
 
+# Build two kernel module source tarballs for use with
+#  - module-assistant and make-kpkg
+#  - dkms
 override_dh_auto_install:
-	dh_auto_install
-
-	# Module source code.
-	mkdir -p $(module_source)/debian
+	mkdir -p $(module_source)
 	cp -a NVIDIA-Linux/usr/src/nv/* $(module_source)/
 	cp -a NVIDIA-Linux/usr/share/doc/NVIDIA_Changelog $(module_source)/
 
@@ -78,7 +75,7 @@ override_dh_auto_install:
 
 	# We want both 32 and 64 bit versions of nv-kernel.o.  Do not use a
 	# name matching *.o to prevent accidental deletion by some clean
-	# target
+	# target.
 	cp -a NVIDIA-Linux-i386/usr/src/nv/nv-kernel.o \
 	    $(module_source)/nv-kernel.o.i386
 	cp -a NVIDIA-Linux-amd64/usr/src/nv/nv-kernel.o \
@@ -92,24 +89,25 @@ override_dh_auto_install:
 	cp -a debian/bug-script $(module_source)/debian/
 
 	# Fix permissions.
-	chmod -R a-sx,u=rwX,go=rX debian/nvidia-kernel-source/usr/src
+	chmod -R a-sx,u=rwX,go=rX $(module_source)/../..
 	chmod a+x $(module_source)/debian/rules
 	chmod a+x $(module_source)/conftest.sh
 
 	# Build the tarball.
-	tar cfj debian/nvidia-kernel-source/usr/src/nvidia-kernel.tar.bz2 \
-	    --owner=root --group=src -C debian/nvidia-kernel-source/usr/src \
+	tar cfj $(module_tbz) \
+	    --owner=root --group=src -C $(module_source)/../.. \
 	    --exclude '*.in' --exclude '.svn' modules
-	tar tfvj debian/nvidia-kernel-source/usr/src/nvidia-kernel.tar.bz2
+	tar tfvj $(module_tbz)
 
 	# Use the nvidia-kernel-source source to create the DKMS tree.
-	mkdir -p debian/nvidia-kernel-dkms/usr/src
-	mv $(module_source) debian/nvidia-kernel-dkms/usr/src/nvidia-$(version)
-	cd debian/nvidia-kernel-dkms/usr/src/nvidia-$(version) \
+	mkdir -p $(dir $(dkms_source))
+	mv $(module_source) $(dkms_source)
+	rmdir $(dir $(module_source))
+	cd $(dkms_source) \
 	    && QUILT_PATCHES=debian/patches quilt --quiltrc /dev/null push -a \
 	    && rm -rf .pc debian
+	ls -la $(dkms_source)
 	dh_dkms -V $(version)
-	rmdir debian/nvidia-kernel-source/usr/src/modules
 
 override_dh_installchangelogs:
 	dh_installchangelogs NVIDIA-Linux/usr/share/doc/NVIDIA_Changelog
