* nvidia-kernel-{dkms,source}: temporarily add conflicts with binutild-gold     from experimental, currently modules linked with gold cause kernel oops     while loading (see: #581336)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@894 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -90,6 +90,7 @@ Conflicts:
  nvidia-kernel-legacy-71xx-dkms,
  nvidia-kernel-legacy-96xx-dkms,
  nvidia-kernel-legacy-173xx-dkms,
+ binutils-gold (>> 2.20.51),
 Description: NVIDIA binary kernel module DKMS source
  This package builds the NVIDIA Xorg binary kernel module needed by
  nvidia-glx, using DKMS.  The kernel module will be built for your running
@@ -110,6 +111,8 @@ Architecture: i386 amd64
 Depends: ${misc:Depends}, debhelper (>= 7.2.3~), make, quilt (>= 0.46-7~)
 Recommends: module-assistant | kernel-package,
  nvidia-glx (>= ${nvidia:Version}), nvidia-kernel-common
+Conflicts:
+ binutils-gold (>> 2.20.51),
 Description: NVIDIA binary kernel module source
  This package provides the source for the NVIDIA Xorg binary kernel module
  needed by nvidia-glx in a form suitable for use by module-assistant or
