--- a/debian/rules
+++ b/debian/rules
@@ -86,6 +86,7 @@ override_dh_auto_install:
 	cp -a debian/module/* $(module_source)/
 	cp -a debian/copyright $(module_source)/debian/
 	cp -a debian/bug-script $(module_source)/debian/
+	cp -a debian/bug-control $(module_source)/debian/
 
 	# Fix permissions.
 	chmod -R a-sx,u=rwX,go=rX $(module_source)/../..
