--- a/debian/nvidia-glx-dev.install.in
+++ b/debian/nvidia-glx-dev.install.in
@@ -1,5 +1,5 @@
-NVIDIA-Linux/usr/include/GL/gl.h		usr/include/GL/
-NVIDIA-Linux/usr/include/GL/glext.h		usr/include/GL/
-NVIDIA-Linux/usr/include/GL/glx.h		usr/include/GL/
-NVIDIA-Linux/usr/include/GL/glxext.h		usr/include/GL/
-NVIDIA-Linux/usr/X11R6/lib/libXvMCNVIDIA.a	usr/lib/
+usr/include/GL/gl.h
+usr/include/GL/glext.h
+usr/include/GL/glx.h
+usr/include/GL/glxext.h
+usr/X11R6/lib/libXvMCNVIDIA.a	usr/lib/
